--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                 </div>
                 <div id="about-info">
                     <img src="./img/3.jpg" id="touxiang" alt="">
-                    <p>Hi~我是Airbo</p>
+                    <p>Hi~我是一只汪</p>
                     <div id="web"><img src="./img/web.png" class="about-ico" alt="">
                         <p>
-                            <a href="www.tomzhang.com.cn">Airbo的个人博客</a>
+                            <a href="www.tomzhang.com.cn">我的个人博客</a>
                         </p>
                     </div>
                     <div id="mail"><img src="./img/email.png" class="about-ico" alt="">
                         <p>
-                            <a href="mailto:airbozh@qq.com">airbozh@qq.com</a>
+                            <a href="mailto:airbozh@qq.com">993372253@qq.com</a>
                         </p>
                     </div>
 
@@ -96,12 +96,30 @@
             <div id="main">
                 <div id="psg">
                     <h1>Hello World</h1>
+                    <p>我做了什么： 静态页面展示 const express = require('express') const app = express(); app.use(express.static(__dirname + '/client')) app.listen(999,()=>{ console.log('listing 999') }) 注册邮箱的验证 登录信息的post和返回登录状态 let sendMsg = ({ "email": tempForm.get("email"),
+                        "password": tempForm.get("password") }); $.post("http://127.0.0.1:8081", sendMsg, function (data, textStatus, jqXHR) { if(data.status === 1){ toast("系统","登录成功！"); let url = "./demo-chat.html"; window.localStorage.setItem("token",data.token);
+                        window.localStorage.setItem("id",data.id); window.localStorage.setItem("email",data.email); window.location.replace(url); } else{ toast("系统", "登录失败"); TemplateSpinner.remove(); } } ); 用户上线信息的发送和广播 用数组储存用户在线列表并在有新增项时返回 用户离线时广播消息和删除列表项
+                        同上 发送消息的广播 服务器环境搭建和运行 学到了什么： Node.JS Http模块响应网页请求 Express框架静态页面，post和get请求的发送和响应 Websocket消息的发送与返回 Nodemailer后端服务器自动发送邮件 localStorage本地储存 还应该做点什么： 本次项目没有做私聊是一个小小的遗憾，而原因就是没有在最初项目刚开始的时候选择合适的模块，到后期意识到这个问题再改的时候又要重写很多的代码，于是这个feat就被搁置了。
+                        应该在项目开始的时候就有对整个项目的规划，然后选用合适的工具和方法，我们的项目没有完整的规划，到后面做东西的时候都是走一步看一步，几个人想想要做什么，一拍脑袋就一起做什么了。 技术方面，对于计算机网络http协议等基础还是差的很多，遇到一些跨域等问题的时候就不知道该做什么了。 代码可读性差，没什么写注释的习惯，自己写的东西几天后自己再看的时候都看不懂了。 端口使用过多，每一个小事情都有自己的端口，应该用请求路径代替。
+                    </p>
                 </div>
                 <div id="els">
                     <h1>Else</h1>
                 </div>
                 <div id="abt">
-                    <h1>About me</h1>
+                    <h1>About us</h1>
+                    <div class="people">
+                        <img src="./img/p1.jpg" alt="p1">
+                        <h2>Yunxe</h2>
+                    </div>
+                    <div class="people">
+                        <img src="./img/p2.jpg" alt="p2">
+                        <h2>Shuipin</h2>
+                    </div>
+                    <div class="people">
+                        <img src="./img/p3.jpg" alt="p3">
+                        <h2>Airbo</h2>
+                    </div>
                 </div>
             </div>
             <div id="footer">
