加入信息编辑

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a id="else" class="f-menu">其他</a>
+                    <a id="else" class="f-menu">简介</a>
                 </li>
                 <li>
                     <a id="about" class="f-menu">关于</a>
@@ -92,9 +92,30 @@
 
                 </div>
             </div>
+            <div id="edit" class="main">
+                <h1>编辑信息</h1>
+                <div>
+                    <h3>用户名：</h3>
+                    <input type="text" class="ipt">
+                </div>
+                <div>
+                    <h3>密码：</h3>
+                    <input type="text" class="ipt">
+                </div>
+                <br>
+                <div>
+                    <h3>Email：</h3>
+                    <input type="text" class="ipt">
+                </div>
+                <div>
+                    <h3>ID：</h3>
+                    <input type="text" class="ipt">
+                </div>
 
-            <div id="main">
-                <div id="psg">
+
+            </div>
+            <div id="moren" class="main">
+                <div id="psg" class="word">
                     <h1>Hello World</h1>
                     <div>
                         <h2>JavaScript 是属于 HTML 和 Web 的编程语言。</h2>
@@ -125,12 +146,23 @@
                         <h2>JavaScript 测验
                         </h2>
                         <p>在 W3School 测试您的 JavaScript 技能！</p>
-                        <a href="在 W3School 测试您的 JavaScript 技能！">开始JavaScript技能测试！</a>
+                        <a id="test" href="https://www.w3school.com.cn/js/js_examples.asp">开始JavaScript技能测试！</a>
 
                     </div>
                 </div>
-                <div id="els">
-                    <h1>Else</h1>
+                <div id="els" class="word">
+                    <h1>Introduction</h1>
+                    <h2>desgin idea</h2>
+                    <p>我们十分喜欢具有较大媒体展示的页面，</p>
+                    <p>并且，页面内容也十分简洁</p>
+                    <p>同时，网页中也加入了很多的动画和样式，统一的风格让他们看起来也十分和谐统一</p>
+                    <br>
+                    <h2>What we can do</h2>
+                    <ul>
+                        <li>网站最主要的作用的作为个人博客使用</li>
+                        <li>当然，我们提供了很多的图片展示区域，你也可以用网页来展示你的商品或团队</li>
+                        <li>我们也提供了完善的登录注册功能，稍作改动，也可以作为论坛来使用</li>
+                    </ul>
                 </div>
                 <div id="abt">
                     <h1>About us</h1>
