--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                     </ul>
                 </li>
                 <li>
-                    <<<<<<< HEAD <a id="else" class="f-menu">简介</a>
-                        =======
-                        <a id="else" class="f-menu">其他</a> >>>>>>> origin/yun
+                    <a id="else" class="f-menu">简介</a>
                 </li>
                 <li>
                     <a id="about" class="f-menu">关于</a>
@@ -69,8 +67,10 @@
                     <p>生活原本沉闷，但跑起来就有风</p>
                 </div>
                 <div id="login">
-                    <input type="text" name="username" value="username" class="ipt">
-                    <input type="password" name="pswd" value="password" class="ipt">
+                    <div id="inpt">
+                        <input type="text" name="username" value="username" class="ipt">
+                        <input type="password" name="pswd" value="password" class="ipt">
+                    </div>
                     <p class="logst"></p>
                     <div id="sbm">LOG IN</div>
                 </div>
@@ -97,22 +97,24 @@
             <div id="edit" class="main">
                 <h1>编辑信息</h1>
                 <div>
-                    <h3>用户名：</h3>
+                    <h3>用户名:</h3>
                     <input type="text" class="ipt">
                 </div>
                 <div>
-                    <h3>密码：</h3>
+                    <h3>密码:</h3>
                     <input type="text" class="ipt">
                 </div>
                 <br>
                 <div>
-                    <h3>Email：</h3>
+                    <h3>Email:</h3>
                     <input type="text" class="ipt">
                 </div>
                 <div>
-                    <h3>ID：</h3>
+                    <h3>ID:</h3>
                     <input type="text" class="ipt">
                 </div>
+                <br>
+                <div id="subm">Sumbit</div>
 
 
             </div>
