--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     </div>
                     <p class="logst"></p>
                     <div id="sbm">LOG IN</div>
+                    <div id="reg">REGISTER</div>
                 </div>
                 <div id="ad">
                     <img src="./img/x.png" id="x" alt="x">
@@ -83,7 +84,7 @@
                     <p>Hi~我是一只汪</p>
                     <div id="web"><img src="./img/web.png" class="about-ico" alt="">
                         <p>
-                            <a href="www.tomzhang.com.cn">我的个人博客</a>
+                            <a href="http://www.tomzhang.com.cn">我的个人博客</a>
                         </p>
                     </div>
                     <div id="mail"><img src="./img/email.png" class="about-ico" alt="">
@@ -95,6 +96,7 @@
                 </div>
             </div>
             <div id="edit" class="main">
+                <h2 style="text-align: left;"><a href="http://localhost:5500">&lt;&lt;返回</a></h2>
                 <h1>编辑信息</h1>
                 <div>
                     <h3>用户名:</h3>
@@ -102,7 +104,7 @@
                 </div>
                 <div>
                     <h3>密码:</h3>
-                    <input type="text" class="ipt">
+                    <input type="password" class="ipt">
                 </div>
                 <br>
                 <div>
