--- a/index.html
+++ b/index.html
@@ -95,6 +95,24 @@
 
                 </div>
             </div>
+            <div id="regi" class="main">
+                <h2 style="text-align: left;"><a href="http://localhost:5500">&lt;&lt;返回</a></h2>
+                <h1>注册</h1>
+                <div>
+                    <h3>用户名:</h3>
+                    <input type="text" class="ipt">
+                </div>
+                <div>
+                    <h3>密码:</h3>
+                    <input type="password" class="ipt">
+                </div>
+                <div>
+                    <h3>Email:</h3>
+                    <input type="text" class="ipt">
+                </div>
+                <br>
+                <div id="regi-subm">Sumbit</div>
+            </div>
             <div id="edit" class="main">
                 <h2 style="text-align: left;"><a href="http://localhost:5500">&lt;&lt;返回</a></h2>
                 <h1>编辑信息</h1>
@@ -117,8 +135,6 @@
                 </div>
                 <br>
                 <div id="subm">Sumbit</div>
-
-
             </div>
             <div id="moren" class="main">
                 <div id="psg" class="word">
