--- a/mdarea.html
+++ b/mdarea.html
@@ -10,8 +10,12 @@
 <body>
 
     <div id="test-markdown-view">
-        <textarea style="display:none;"># 12\n # 123</textarea>
+        <textarea style="display:none;"># 123</textarea>
+
     </div>
+
+
+
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="./nodeapp/node_modules/editor.md/editormd.js"></script>
     <script src="./nodeapp/node_modules/editor.md/lib/marked.min.js"></script>
@@ -19,9 +23,13 @@
     <script type="text/javascript">
         $(function() {
             var testView = editormd.markdownToHTML("test-markdown-view", {
-                // markdown : "[TOC]\n### Hello world!\n## Heading 2", // Also, you can dynamic set Markdown text
-                // htmlDecode : true,  // Enable / disable HTML tag encode.
-                // htmlDecode : "style,script,iframe",  // Note: If enabled, you should filter some dangerous HTML tags for website security.
+                htmlDecode: "style,script,iframe",
+                emoji: true,
+                taskList: true,
+                //tex: true, // 默认不解析
+                flowChart: true, // 默认不解析
+                sequenceDiagram: true, // 默认不解析
+                codeFold: true,
             });
         });
     </script>
