--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         <div id="pic4" class="bgimg" style="background-image: url('./img/bgimg4.jpg');"></div>
     </div>
     <!--第二层-->
-    <div style="height: 100%;">
+    <div id="second-floor" style="height: 100%;">
         <!--空白占位区域-->
         <div style="height: 93%;" id="blank"></div>
 
         <!--菜单栏-->
         <div id="header-bar">
+            <div id="header-bar-bg"></div>
             <ul>
                 <li><a id="index" class="f-menu">主页</a></li>
                 <li>
@@ -57,7 +58,6 @@
                     <a id="logi" class="f-menu">登录</a>
                 </li>
             </ul>
-            <div id="header-bar-bg"></div>
         </div>
         <!--内容区域-->
         <div id="center">
