--- a/mdarea.html
+++ b/mdarea.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./nodeapp/node_modules/editor.md/css/editormd.preview.css">
+    <style>
+        #q {
+            background-color: rebeccapurple;
+            height: 300px;
+            width: 200px;
+            position: absolute;
+        }
+        
+        #w {
+            position: absolute;
+            height: 800px;
+            width: 100px;
+            background-color: aquamarine;
+        }
+        
+        .a {}
+    </style>
 </head>
 
 <body>
+    <div id="q" class="a"></div>
+    <div id="w" class="a"></div>
 
-    <div id="test-markdown-view">
-        <textarea style="display:none;"># 123</textarea>
-
-    </div>
-
-
-
-    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="./nodeapp/node_modules/editor.md/editormd.js"></script>
-    <script src="./nodeapp/node_modules/editor.md/lib/marked.min.js"></script>
-    <script src="./nodeapp/node_modules/editor.md/lib/prettify.min.js"></script>
-    <script type="text/javascript">
-        $(function() {
-            var testView = editormd.markdownToHTML("test-markdown-view", {
-                htmlDecode: "style,script,iframe",
-                emoji: true,
-                taskList: true,
-                //tex: true, // 默认不解析
-                flowChart: true, // 默认不解析
-                sequenceDiagram: true, // 默认不解析
-                codeFold: true,
-            });
-        });
-    </script>
 </body>
 
 </html>
