--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Index</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./nodeapp/node_modules/editor.md/css/editormd.css">
 </head>
 
 <body>
@@ -56,6 +57,7 @@
                 </li>
                 <li>
                     <a id="logi" class="f-menu">登录</a>
+                    <a href="http://localhost:5500" style="display: none;" id="logout" class="f-menu">退出</a>
                 </li>
             </ul>
         </div>
@@ -89,12 +91,12 @@
                     </div>
                     <div id="mail"><img src="./img/email.png" class="about-ico" alt="">
                         <p>
-                            <a href="mailto:airbozh@qq.com">993372253@qq.com</a>
+                            <a href="mailto:airbozh@qq.com">airbozh@qq.com</a>
                         </p>
                     </div>
-
                 </div>
             </div>
+            <!-- 注册页 -->
             <div id="regi" class="main">
                 <h2 style="text-align: left;"><a href="http://localhost:5500">&lt;&lt;返回</a></h2>
                 <h1>注册</h1>
@@ -111,10 +113,10 @@
                     <input type="text" class="ipt">
                 </div>
                 <br>
-                <div id="regi-subm">Sumbit</div>
+                <div id="regi-subm" class="submit-button">Sumbit</div>
             </div>
+            <!-- 编辑页 -->
             <div id="edit" class="main">
-                <h2 style="text-align: left;"><a href="http://localhost:5500">&lt;&lt;返回</a></h2>
                 <h1>编辑信息</h1>
                 <div>
                     <h3>用户名:</h3>
@@ -134,9 +136,11 @@
                     <input type="text" class="ipt">
                 </div>
                 <br>
-                <div id="subm">Sumbit</div>
+                <div id="subm" class="submit-button">Sumbit</div>
             </div>
+            <!-- 默认页 -->
             <div id="moren" class="main">
+                <!-- 内容区域 -->
                 <div id="psg" class="word">
                     <h1>Hello World</h1>
                     <div>
@@ -172,6 +176,7 @@
 
                     </div>
                 </div>
+
                 <div id="els" class="word">
                     <h1>Introduction</h1>
                     <h2>desgin idea</h2>
@@ -186,6 +191,7 @@
                         <li>我们也提供了完善的登录注册功能，稍作改动，也可以作为论坛来使用</li>
                     </ul>
                 </div>
+
                 <div id="abt">
                     <h1>About us</h1>
                     <div class="people">
@@ -201,7 +207,19 @@
                         <h2>Airbo</h2>
                     </div>
                 </div>
+                <!-- 内容区域 -->
             </div>
+            <!-- 发帖页 -->
+            <div id="post" class="main">
+                <div id="editor">
+                    <textarea class="editormd-markdown-textarea" name="doc" style="display:none;"># 请输入标题 !</textarea>
+                </div>
+                <div style="text-align: center;">
+                    <button class="submit-button" style="display: inline-block;" id="markdown-button">发帖</button>
+                </div>
+                <!-- <iframe id="markdown-edit-area" src="./mdtest.html"></iframe> -->
+            </div>
+
             <div id="footer">
                 <p>-----我是有底线的哦------</p>
             </div>
@@ -220,8 +238,13 @@
     </div>
 
     <!-- scripts -->
-    <script src="https://upcdn.b0.upaiyun.com/libs/jquery/jquery-2.0.2.min.js"></script>
+    <!-- <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script> -->
+    <script src="./js/jquery.mini.js"></script>
     <script src="./script.js"></script>
+
+    <script src="./nodeapp/node_modules/editor.md/editormd.min.js"></script>
+    <script>
+    </script>
 </body>
 
 </html>
