--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                     <a id="logi" class="f-menu">登录</a>
-                    <a href="http://localhost:5500" style="display: none;" id="logout" class="f-menu">退出</a>
+                    <a href="http://127.0.0.1:5500" style="display: none;" id="logout" class="f-menu">退出</a>
                 </li>
             </ul>
         </div>
