--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
                     <input type="text" class="ipt">
                 </div>
                 <div>
-                    <h3>密码:</h3>
-                    <input type="password" class="ipt">
+                    <h3>性别:</h3>
+                    <input type="text" class="ipt">
                 </div>
                 <br>
                 <div>
-                    <h3>Email:</h3>
+                    <h3>签名:</h3>
                     <input type="text" class="ipt">
                 </div>
                 <div>
-                    <h3>ID:</h3>
+                    <h3>年龄:</h3>
                     <input type="text" class="ipt">
                 </div>
                 <br>
