--- a/mdarea.html
+++ b/mdarea.html
@@ -14,14 +14,20 @@
 
     </div>
     <hr style="border: 5px solid #6772e5;box-shadow: 4px 2px 8px #6772e5;">
-    <script src="./js/jquery.mini.js"></script>
-    <script src="./nodeapp/node_modules/editor.md/editormd.js"></script>
-    <script src="./nodeapp/node_modules/editor.md/lib/marked.min.js"></script>
-    <script src="./nodeapp/node_modules/editor.md/lib/prettify.min.js"></script>
-    <script type="text/javascript">
+    <div class="comm">
+        <div class="com-account">${com.account}</div>
+        <div class="com-com">${com.con}</div>
+        <input type="text" class="com_input_${post_id}">
+        <button class="com_submit_button" onclick="com_post()">评论</button>
+    </div>
+    <script src=" ./js/jquery.mini.js "></script>
+    <script src="./nodeapp/node_modules/editor.md/editormd.js "></script>
+    <script src="./nodeapp/node_modules/editor.md/lib/marked.min.js "></script>
+    <script src="./nodeapp/node_modules/editor.md/lib/prettify.min.js "></script>
+    <script type="text/javascript ">
         var print = function() {
-            var testView = editormd.markdownToHTML("test-markdown-view", {
-                htmlDecode: "style,script,iframe",
+            var testView = editormd.markdownToHTML("test-markdown-view ", {
+                htmlDecode: "style,script,iframe ",
                 emoji: true,
                 taskList: true
                     //codeFold: true,
@@ -32,14 +38,14 @@
             account = 0,
             title = 0,
             article = 0
-        $.post("http://127.0.0.1:9696/ps", {
-            "account": "test"
+        $.post("http://127.0.0.1:9696/ps ", {
+            "account ": "test "
         }, function(data, status) {
             var model = data.data.model
             for (i in model) {
                 article = model[i].article
                 console.log(article)
-                $("#test-markdown-view").html($("#test-markdown-view").html() + `<textarea id="view-markdown-area" style="display:none;">${article}</textarea>`)
+                $("#test-markdown-view ").html($("#test-markdown-view ").html() + `<textarea id="view-markdown-area " style="display:none; ">${article}</textarea>`)
                 $(print)
             }
         })
